--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,10 @@
       "#*": ["*"]
     }
   },
+  "baseUrl": "./src/",
+  "paths": {
+    "#*": ["*"]
+  },
   "include": [
     "./src/**/*",
     "./config/test/config.d.ts",
